InternexDev_Sandbox/src/objects/Configuration_for_the_Reports__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Days_to_Calculate_for_Client_Maturing__c</fullName>
        <label>Days to Calculate for Client Maturing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Calculate_for_Payments__c</fullName>
        <label>Days to Calculate for Payments Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_calculate_for_Debtor_Report__c</fullName>
        <label>Days to calculate for Debtor Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Configuration for the Reports</label>
</CustomObject>